# email-sanitizer-api

./: .codecov.yml  .env.example  .gitignore  COVERAGE.md  Cargo.toml  ci-check.sh  coverage.ps1  coverage.sh  readme.md  rust-toolchain.toml  test-ci-build.sh
.github/workflows/: ci.yml
.husky/: pre-commit
deployment/: DEPLOYMENT.md
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: setup.sh  update.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
manual-testing/: README.md
manual-testing/graphql/: bulk-validation-queue.graphql  email-validation-with-auth.graphql  job-status.graphql  role-based-validation.graphql
manual-testing/rest/: GET-job_status.http  GET-job_status_with_auth.http  POST-auth_invalid_key.http  POST-email_role_based.http  POST-email_unauthorized.http  POST-email_valid_with_auth.http  POST-emails_bulk_empty.http  POST-emails_bulk_large_queue.http  POST-emails_bulk_mixed.http  POST-emails_bulk_role_based.http  POST-emails_bulk_valid.http  POST-emails_bulk_with_auth.http  POST-register.http  POST-register_duplicate.http  POST-register_invalid.http  POST-signup.http
manual-testing/routes/: GET-health.http  POST-email_invalid_disposable.http  POST-email_invalid_dnsmx.http  POST-email_invalid_syntax.http  POST-email_valid.http
src/: additional_tests.rs  auth.rs  job_queue.rs  job_queue_tests.rs  lib.rs  main.rs  models.rs  openapi.rs  routes.rs  worker.rs
src/graphql/: email.rs  email_test.rs  handlers.rs  handlers_test.rs  health.rs  mod.rs  schema.rs
src/handlers/: health.rs  mod.rs
src/models/: email.rs  (+2 more)
(+21 files in other folders)
