[package]
name = "email-sanitizer"
version = "0.4.0+sprint2"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.40"
serde_json = "1.0.140"
trust-dns-resolver = "0.23.2"
mongodb = { version = "3.2.3" }

[dev-dependencies]
husky = "0.3.0"
